tests/paczka1/small_fuzzy/41455107.err
Error in line 2: akHZMo S433 90,2
Error in line 1: o5xk2dx3 S433 2,3
